--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -2,7 +2,8 @@
     --md-primary-fg-color:        #040E29;
     --md-primary-fg-color--light: #FFFFFF;
     --md-primary-fg-color--dark:  #040E29;
-    --md-accent-fg-color:        #040E29;
+    --md-accent-fg-color:        #FF6B00;
     --md-accent-fg-color--light: #FFFFFF;
-    --md-accent-fg-color--dark:  #040E29;
+    --md-accent-fg-color--dark:  #FF6B00;
+    --md-typeset-a-color:  #FF6B00;
 }
