--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -6,4 +6,96 @@
     --md-accent-fg-color--light: #FFFFFF;
     --md-accent-fg-color--dark:  #FF6B00;
     --md-typeset-a-color:  #FF6B00;
+    --md-footer-bg-color: #F3F9FC;
+    --md-footer-fg-color: #040E29;
+    --md-footer-fg-color--light: #FFFFFF;
+    --md-footer-bg-color--dark: #040E29;
+}
+
+.hero {
+    background: url('/assets/dark.background.svg');
+    background-color: var(--md-primary-fg-color);
+    background-blend-mode: color-dodge;
+    border: 1px solid var(--md-footer-bg-color);
+    color: var(--md-primary-fg-color--light);
+    --md-default-fg-color--light: var(--md-primary-fg-color--light);
+    margin-bottom: 1rem;
+}
+
+.hero-subheadline {
+    background: var(--md-primary-fg-color--light);
+    padding: 3rem;
+}
+
+.hero-headline {
+    padding: 3rem;
+}
+
+.hero h1 {
+    background: var(--md-primary-fg-color--light);
+    color: var(--md-primary-fg-color);
+    padding: 5px 10px;
+    display: inline;
+    line-height: 2;
+    box-decoration-break: clone;
+    -webkit-box-decoration-break: clone;
+}
+
+.hero h2 {
+    color: var(--md-primary-fg-color);
+    margin: 0;
+}
+
+.btn, 
+.btn:hover, 
+.btn:focus {
+    background-color: var(--md-accent-fg-color) !important;
+    color: var(--md-accent-fg-color--light) !important;
+    padding: .5rem .75rem;
+}
+
+.features {
+    background-color: var(--md-footer-bg-color);
+    padding: 3rem;
+    margin-bottom: 1rem;
+}
+
+.features h2 {
+    color: var(--md-primary-fg-color);
+    margin: 0 0 1.5rem 0;
+}
+
+.features p {
+    margin: 0 0 2.5rem 0;
+}
+
+.technology {
+    border: 1px solid var(--md-footer-bg-color);
+    padding: 3rem;
+    text-align: center;
+}
+
+.technology h2 {
+    color: var(--md-primary-fg-color);
+    margin: 0 0 1.5rem 0;
+}
+
+.technology p {
+    margin: 0 0 2.5rem 0;
+}
+
+.technology-list {
+    align-items: center;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1.5rem;
+    justify-content: center;
+}
+
+.technology-list img {
+    max-height: 50px;
+}
+
+.md-header__ellipsis {
+    display: none;
 }
