--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -21,6 +21,10 @@
     color: var(--md-primary-fg-color--light);
     --md-default-fg-color--light: var(--md-primary-fg-color--light);
     margin-bottom: 1rem;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-auto-rows: auto;
+    gap: 1rem;
 }
 
 .hero-subheadline {
@@ -162,6 +166,10 @@
 @media (max-width: 767px) {
     :root > * {
         --obms-box-padding: 2rem !important;
+    }
+
+    .hero {
+        grid-template-columns: repeat(1, 1fr);
     }
 
     .features-list {
