--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -30,25 +30,61 @@
 .hero-subheadline {
     background: var(--md-primary-fg-color--light);
     padding: var(--obms-box-padding);
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    gap: 1.25rem;
 }
 
 .hero-headline {
     padding: var(--obms-box-padding);
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
 }
 
 .hero h1 {
-    background: var(--md-primary-fg-color--light);
-    color: var(--md-primary-fg-color);
+    background: var(--md-accent-fg-color);
+    color: var(--md-accent-fg-color--light);
     padding: 5px 10px;
     display: inline;
-    line-height: 2;
+    line-height: 1.85;
     box-decoration-break: clone;
     -webkit-box-decoration-break: clone;
+    margin-bottom: 2rem;
 }
 
 .hero h2 {
     color: var(--md-primary-fg-color);
-    margin: 0;
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+.hero-headline div {
+    margin-bottom: 1rem;
+}
+
+.hero-headline ul, 
+.hero-headline ul li {
+    list-style: none;
+    margin: 0 !important;
+    padding: 0 !important;
+}
+
+.hero-headline ul {
+    display: flex !important;
+    flex-direction: column;
+    gap: 0.15rem;
+}
+
+.hero ul li span {
+    background: var(--md-footer-bg-color);
+    color: var(--md-primary-fg-color);
+    padding: 5px 10px;
+    display: inline;
+    line-height: 2.25;
+    box-decoration-break: clone;
+    -webkit-box-decoration-break: clone;
 }
 
 .btn, 
