--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -139,6 +139,50 @@
     padding: 1.5rem;
 }
 
+.compliance {
+    background-color: var(--md-footer-bg-color);
+    padding: var(--obms-box-padding);
+    margin-bottom: 1rem;
+}
+
+.compliance h2 {
+    color: var(--md-primary-fg-color);
+    margin: 0 0 1.5rem 0;
+}
+
+.compliance p {
+    margin: 0 0 2.5rem 0;
+}
+
+.compliance-list {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-auto-rows: auto;
+    gap: 1rem;
+    margin-bottom: var(--obms-box-padding);
+}
+
+.compliance-list i {
+    color: var(--md-accent-fg-color);
+    font-size: 1.25rem;
+    line-height: 1;
+}
+
+.compliance-list-item p {
+    margin-bottom: 0;
+}
+
+.compliance-list-item h3 {
+    color: var(--md-primary-fg-color);
+    margin-top: 0.75rem;
+    margin-bottom: 0.5rem;
+}
+
+.compliance-list-item {
+    background-color: var(--md-primary-fg-color--light);
+    padding: 1.5rem;
+}
+
 .technology {
     border: 1px solid var(--md-footer-bg-color);
     padding: var(--obms-box-padding);
