--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -237,8 +237,17 @@
     opacity: 1;
 }
 
+.image-gallery {
+    display: grid; 
+    justify-content: space-between; 
+    gap: .5rem; 
+    grid-template-columns: repeat(3, 1fr); 
+    grid-auto-rows: auto;
+}
+
 @media (max-width: 959px) {
-    .features-list {
+    .features-list,
+    .image-gallery {
         grid-template-columns: repeat(2, 1fr);
     }
 }
@@ -252,7 +261,8 @@
         grid-template-columns: repeat(1, 1fr);
     }
 
-    .features-list {
+    .features-list,
+    .image-gallery {
         grid-template-columns: repeat(1, 1fr);
     }
 }
