--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -1,7 +1,7 @@
 :root  > * {
-    --md-primary-fg-color:        #040E29;
+    --md-primary-fg-color:        #ff6b00;
     --md-primary-fg-color--light: #FFFFFF;
-    --md-primary-fg-color--dark:  #040E29;
+    --md-primary-fg-color--dark:  #ff6b00;
     --md-accent-fg-color:        #FF6B00;
     --md-accent-fg-color--light: #FFFFFF;
     --md-accent-fg-color--dark:  #FF6B00;
